# samhitahub_assets

./: esoteric-sled-461113-q9-faecb00de2ac.json
samhitahub-studio-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
samhitahub-studio-backend/app/: __init__.py  main.py
samhitahub-studio-backend/app/api/: __init__.py  deps.py
samhitahub-studio-backend/app/api/v1/: router.py
samhitahub-studio-backend/app/api/v1/endpoints/: drive.py  (+2 more)
samhitahub-studio-backend/app/background/: __init__.py  tasks.py
samhitahub-studio-backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py
samhitahub-studio-backend/app/models/: __init__.py  base.py
samhitahub-studio-backend/app/modules/: __init__.py
samhitahub-studio-backend/app/modules/ai/: README.md  __init__.py
samhitahub-studio-backend/app/modules/firestore/: README.md  __init__.py
samhitahub-studio-backend/app/modules/google_drive/: README.md  __init__.py  client.py  schemas.py
samhitahub-studio-backend/app/repositories/: __init__.py  base.py  drive_repository.py
samhitahub-studio-backend/app/schemas/: __init__.py  common.py  drive.py  health.py
samhitahub-studio-backend/app/services/: __init__.py  base.py  drive_service.py  health_service.py
samhitahub-studio-backend/app/utils/: __init__.py  datetime_utils.py
samhitahub-studio-backend/docs/: ARCHITECTURE.md
samhitahub-studio-backend/scripts/: run_dev.sh
samhitahub-studio-backend/tests/: __init__.py  conftest.py  test_drive.py  test_health.py
